--- a/styles/style-denis.css
+++ b/styles/style-denis.css
@@ -16,7 +16,7 @@ nav {
 
 .minecraft-logo {
   width: 30%;
-  background-image: url(./img/minecraft-logo.svg);
+  background-image: url(../assets/images/minecraft-logo.svg);
   height: 60%;
   background-repeat: no-repeat;
 }
@@ -32,6 +32,7 @@ nav {
   font-family: "Times New Roman", Times, serif;
   font-weight: bold;
 }
+
 .nav-list a {
   color: #ffffff;
   text-decoration: none;
@@ -111,7 +112,7 @@ main{
  .background-homepage {
   width: 100%;
   height: 40rem;
-  background-image: url(/projekti-praktik/img/Minecraft-PS4-Wallpapers-16.jpg);
+  background-image: url(../assets/images/Minecraft-PS4-Wallpapers-16.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
