--- a/style.css
+++ b/style.css
@@ -1,30 +1,54 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-header nav{
-    display: flex;
+.main-wrapper {
+  padding: 2rem 4rem 0 4rem;
+  background-color: #313131;
 }
 
-header nav ul{
-    display: flex;
-    list-style-type: none;
-    
-}
-header nav ul li a{
-    padding-left: 1rem;
+header nav {
+  display: flex;
 }
 
-header{
-    height: 4rem;
-    background-color: #313131;
-    justify-content: space-around;
+header nav ul {
+  display: flex;
+  list-style-type: none;
+}
+header nav ul li a {
+  padding-left: 1rem;
+}
+
+header {
+  height: 4rem;
+  background-color: #313131;
+  justify-content: space-around;
+  border-bottom: #6cc349 1px solid;
+}
+
+main .box-main {
+  display: flex;
+  align-items: center;
+  height: 40vh;
+  background-color: black;
+}
+
+main .box-main .left-box {
+  width: 70%;
+  color: white;
+  padding-left: 2rem;
+  background-color: red;
+}
+
+main .box-main img {
+  width: 30%;
+  height: auto;
 }
