--- a/style.css
+++ b/style.css
@@ -2,12 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Times New Roman', Times, serif;
+  text-transform: capitalize;
 }
 
 /* ============  header section =========== */ 
 header{
   background-color: #313131;
-  border-bottom: #6cc349 1px solid;
+  border-bottom: #2aa845 1px solid;
   padding: 1rem 0;
 }
 header .container {
@@ -35,36 +37,98 @@ header nav ul li a {
   color: #fff;
   text-decoration: none;
 }
+
+
+.btn-blej:hover,
+.btn-hyr:hover{
+  background-color: transparent;
+  border: 1px solid #2aa845;
+  color: #6cc349;
+  cursor: pointer;
+
+
+}
+.btn-blej, 
+.btn-hyr{
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem;
+  background-color: transparent;
+}
+.btn-blej{
+  color: #313131;
+  background-color: #2aa845;
+}
+.btn-hyr{
+  border: 1px solid #2aa845;
+  color: whitesmoke;
+
+}
 /* ========== end of header section ========== */
 
 
 
-/*  section of wrapper i homepage */
-.main-wrapper {
+/* ============ section of  background wrapper i homepage ========== */
+
+
+
+.background-wrapper {
   padding: 2rem 4rem 0 4rem;
   background-color: #313131;
 }
 
 
+/*  =========== end of section of wrapper i homepage  =============*/
 
 
 
-.homepage .box-main {
+
+/* =========== starting section of homepage =========== */
+
+.homepage .first-item {
   width: 100%;
   display: flex;
   align-items: center;
-  height: 40vh;
-  background-color: black;
+  justify-content: space-between;
 
 }
 
-.homepage .box-main .left-box,
-.homepage .box-main .right-box{
+.homepage .first-item .first-item-left-box,
+.homepage .first-item .first-item-right-box{
   width: 50%;
   color: white;
 }
 
-.homepage .box-main img {
+.homepage .first-item img {
   width: 30%;
   height: auto;
+}
+
+.btn-shkarko,
+.btn-shiko-lajmet {
+  padding: 0.5rem;
+  background: transparent;
+  border: none;
+  border-radius: 4px;
+}
+
+.btn-shkarko:hover,
+.btn-shiko-lajmet:hover{
+  background-color: transparent;
+  border: 1px solid #2aa845;
+  color: #6cc349;
+  cursor: pointer;
+
+
+}
+
+
+.btn-shkarko{
+  color: #313131;
+  background-color: #2aa845;
+}
+.btn-shiko-lajmet{
+  color: whitesmoke;
+  border: 1px solid #2aa845;
+
 }
